backend/k8s/quest-processing-db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quest-processing-db
  namespace: app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quest-processing-db
  template:
    metadata:
      labels:
        app: quest-processing-db
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-storage
      volumes:
      - name: postgres-storage
        emptyDir: {}
