backend/k8s/quest-processing-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quest-processing-service
  namespace: app-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quest-processing-service
  template:
    metadata:
      labels:
        app: quest-processing-service
    spec:
      containers:
      - name: quest-processing-service
        image: soundwavexmx2/quest-processing-service:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
