backend/k8s/api-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: app-namespace
spec:
  selector:
    app: api-gateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
