backend/k8s/quest-catalog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quest-catalog-service
  namespace: app-namespace
spec:
  selector:
    app: quest-catalog-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
