backend/k8s/quest-processing-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quest-processing-db
  namespace: app-namespace
spec:
  selector:
    app: quest-processing-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
