backend/k8s/quest-processing-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quest-processing-service
  namespace: app-namespace
spec:
  selector:
    app: quest-processing-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
