backend/k8s/user-auth-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-auth-db
  namespace: app-namespace
spec:
  selector:
    app: user-auth-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
