backend/k8s/user-auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-auth-service
  namespace: app-namespace
spec:
  selector:
    app: user-auth-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
